# learning_jax

./: .gitignore  README.md  learning_flax.ipynb  pyproject.toml  scipy2020_demo.ipynb
wandb/: latest-run
wandb/run-20260105_001422-026lkxzn/: run-026lkxzn.wandb
wandb/run-20260105_001422-026lkxzn/files/: requirements.txt  wandb-metadata.json
wandb/run-20260106_043901-nf1ayuul/: run-nf1ayuul.wandb
wandb/run-20260106_043901-nf1ayuul/files/: wandb-metadata.json
wandb/run-20260106_050912-m5836msk/: run-m5836msk.wandb
wandb/run-20260106_050912-m5836msk/files/: wandb-metadata.json
wandb/run-20260106_054509-tgl4cr22/: run-tgl4cr22.wandb
wandb/run-20260106_054509-tgl4cr22/files/: wandb-metadata.json
wandb/run-20260107_032701-czf9lza2/: run-czf9lza2.wandb
wandb/run-20260107_032701-czf9lza2/files/: wandb-metadata.json
wandb/run-20260107_034036-efkl9u5m/: run-efkl9u5m.wandb
wandb/run-20260107_034036-efkl9u5m/files/: wandb-metadata.json
wandb/run-20260108_022120-dle2bkvj/: run-dle2bkvj.wandb
wandb/run-20260108_022120-dle2bkvj/files/: wandb-metadata.json
wandb/run-20260108_031340-ups1qpxq/: run-ups1qpxq.wandb
wandb/run-20260108_031340-ups1qpxq/files/: wandb-metadata.json
wandb/run-20260108_034936-4g57nkit/: run-4g57nkit.wandb
wandb/run-20260108_041639-wuelhogn/: run-wuelhogn.wandb
wandb/run-20260108_045501-gqng0weq/: run-gqng0weq.wandb
wandb/run-20260108_045858-skyvrk5w/: run-skyvrk5w.wandb
wandb/run-20260108_051554-8m6lwizo/: run-8m6lwizo.wandb
wandb/run-20260108_052842-wu1l2n3m/: run-wu1l2n3m.wandb
(+10 files in other folders)
